<resources>
    <string name="app_name">To Fly</string>
    <string name="title_activity_main">To Fly</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_simulators">Simulators</string>
    <string name="plane_components_button">Plane Components</string>

    <string name="action_example">Settings</string>
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>

    <string name="zivko">Zivko Edge 540</string>
    <string name="F_35">Lightning II F-35</string>
    <string name="FA18">FA/18 Blue Angels</string>
    <string name="Corsair">F-4U Corsair</string>
    <string name="F22">F-22 Raptor</string>
    <string name="Max_Flight">Max Flight</string>
    <string name="Mars_Rover">Mars Rover</string>
    <string name="T7D">7D Theater</string>
    <string name="BD9">Boeing DC 9</string>
    <string name="cessna">Cessna Skyhawk 172</string>

    <string name="title_activity_plane_components">Plane Components</string>
    <string name="plane_body">Plane Body</string>
    <string name="title_activity_plane_body">Plane Body</string>

    <string name="Cockpit">Cockpit</string>
    <string name="Landing_Gear">Landing Gear</string>
    <string name="Engine">Engines</string>
    <string name="Tail">Tail</string>

    <string name="hello_world">Hello world!</string>

    <string name="dialog_title">Select A Game</string>
    <string name="trivia_label"> Trivia </string>
    <string name="hunt_label"> Scavenger Hunt </string>
    <string name="easy_label"> Easy </string>
    <string name="medium_label"> Medium </string>

    <string name="title_activity_keller_theater">Fun Facts</string>
    <string name="keller_theater">Fun Facts </string>
    <string name="title_activity_fun_facts">Fun Facts</string>
    <string name="title_activity_materials_used">Materials</string>
    <string name="title_activity_control_tower">Control Tower</string>

    <string name="title_section1">Fun Facts</string>

    <string name="materials_description1">Several materials can be used for major structures—wings, fuselage,
        or landing gear, for example—on different types of aircraft.</string>
    <string name="materials_description2">Wood was used on most early airplanes and is now mainly used on homebuilt airplanes.
        Wood is lightweight and strong, but it also splinters and requires a lot of maintenance.</string>
    <string name="materials_description3">Aluminum is used on most types of aircraft because it is lightweight and strong.
        Aluminum alloys don’t corrode as readily as steel. But because they lose their strength at high temperatures, they cannot be used for skin surfaces that become very hot on airplanes that fly faster than twice the speed of sound.</string>
    <string name="materials_description4">Steel can be up to four times stronger and three times stiffer than aluminum, but it is also three times heavier. It is used for certain components like landing gear, where strength and hardness are especially important.</string>
    <string name="materials_description5">Graphite-epoxy is one of several types of composite materials that are becoming widely used for many aircraft structures and components.
    These materials typically consist of strong fibers embedded in a resin. Graphite-epoxy is about as strong as aluminum and weighs about half as much.</string>
    <string name="materials_description6">Titanium is about as strong as steel and weighs less, though it is not as light as aluminum.
        It holds its strength at high temperatures and resists corrosion better than steel or aluminum. Though titanium is expensive, these characteristics have led to its greater use in modern aircraft.</string>

    <string name="control_description">The specific function of the control tower is airfield control, which can be broken up into three sections: local control, ground control, and pre-flight. The task of ensuring safe operations of commercial and private aircraft falls on air traffic controllers.
        They must coordinate the movements of thousands of aircraft, keep them at safe distances from each other, direct them during takeoff and landing from airports, direct them around bad weather, and ensure that traffic flows smoothly with minimal delays.</string>


    <string name="f35_description">The Lockheed Martin F-35 Joint Strike Fighter is the newest jet fighter now being developed, designed to perform ground attack, aerial reconnaissance, and air defense missions. 
        The F-35 variants are intended to provide the bulk of manned tactical power of the U.S. Air Force, Navy, and Marine Corps over the coming decades; deliveries of the F-35 for the U.S. Military are scheduled to be completed in 2037. </string>
    <string name="corsair_description">Argued to be one of the finest aircrafts of World War II, the Vought F4U Corsair will most definitely immerse you in the aviation technology of the mid 1900s! 
        The specially designed 16 cylinder radial engine with over 100 horsepower per cylinder was the most powerful engine in the world at the time. 
        Highly maneuverable and heavily armed for close-in support, the Corsair helped bring the U.S victory over the Japanese in the Pacific.</string>
    <string name="zivko_description">Head over to test the Zivko Edge 540, an aerobatic single engine aircraft used in the worldwide Red Bull Air Race. 
        Capable of a 420 degree turn per second roll rate and a 3,700 foot per minute climb rate, it has flown to victory on the International Unlimited aerobatics circuit several times since the mid-1990s. </string>
    <string name="max_flight_description">Fly the state-of-the-art MaxFlight full motion simulator! 
        Experience adrenaline-filled aerial races and stunt flying with 360-degree pitch, roll, and spin technology! </string>
    <string name="t7d_description">The highlight of the To Fly exhibit space is the revolutionary 7D capsule theater that will take you on an exhilarating flight through the sky! 
        This brand new exhibit will use a 3D aviation film, moving seats, and multi-sensory effects to create an unforgettable, educational, and exciting experience!</string>
    <string name="bd9_description">The Boeing Douglas DC-9 is a twin-engine, single aisle jet airliner that was first manufactured in 1965 and finished its last production in 1982.
        Designed for frequent, short flights, the Douglas DC-9 is still in service today!</string>
    <string name="cessna_description">The four-seat, single engine Cessna 172 Skyhawk features a fixed-wing design and is considered the most successful aircraft in history (measured by its longevity and popularity). 
        First flown in 1955, more Cessna 172s have been built than any other aircraft! </string>
    <string name="raptor_description">This all-weather stealth fighter aircraft was specifically developed for the United States Air Force. 
        Designed primarily as an air superiority fighter, the Lockheed Martin F-22 Raptor is capable of ground attack, electronic warfare, and signals intelligence roles.</string>
    <string name="fa18_description">The Blue Angels is the United States Navy\'s flight demonstration squadron, with aviators from the Navy and Marines.
        The demonstration pilots fly the F/A 18 Hornet in more than 70 shows at 34 locations throughout the United States. 
        An estimated 11 million spectators view the squadron during air shows each full year.</string>
    <string name="mars_rover_description">Go on an exciting expedition to explore the red planet – Mars! 
        This space ship will take you to explore four of the most significant geological features on Mars: Olympus Mons, Ares Vallis, Valles Marineris, and North Pole!</string>
    <string name="cockpit_description">The cockpit holds the command and control section of an airplane. 
        Modern aircraft cockpits have a number of vital instruments for controlling the airplane on the ground as well as when flying.</string>
    <string name="landing_gear_description">The undercarriage, also known as landing gear, provides a platform for the
        aircraft to stand as well as plays an important obvious role in landing and take-off. </string>
    <string name="engines_description">Engines generate thrust and provide hydraulic and electric power.
        Modern aircraft are employed with different types of engines, although jet engines are favored with by most commercial airliners.</string>
    <string name="tail_description">The rudder controls the yaw motion of an airplane.
        The rudder is used to turn the aircraft left or right on the ground and help coordinate turns in the air.</string>

    <string name="funfacts1">Every day, there are approximately 200,000 flights around the world.</string>
    <string name="funfacts2">More than 80% of people report being afraid of flying to some degree.</string>
    <string name="funfacts3">Most airplanes have a flight data recorder that keeps track of everything the plane does.
        These are often called “black boxes” even though they are orange.</string>
    <string name="funfacts4">Airships and blimps are lighter than air and use buoyancy for flight.
        They are typically filled with gas (such as helium) that is less dense than the surrounding atmosphere.</string>
    <string name="funfacts5">To be a flight attendant, you’d have to undergo intensive safety and medical training.
        Serving food and drinks is only part of their job; their main concern is safety.</string>




</resources>
