<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.mods.tofly.MaterialsUsed">

    <TextView android:text="@string/title_activity_materials_used" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:id="@+id/textView1"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:src="@drawable/materialsused"
        android:id="@+id/materials_used"
        android:layout_marginTop="110dp" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:fillViewport="false"
        android:layout_marginTop="490dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/materials_description1"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/materials_description2"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/materials_description3"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/materials_description4"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/materials_description5"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/materials_description6"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
